// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortableItem renders a count when provided 1`] = `
<div
  aria-describedby=""
  aria-roledescription="sortable"
  className=""
  data-testid="qb-select-column-order"
  role="button"
  style={
    Object {
      "transform": undefined,
      "transition": undefined,
    }
  }
  tabIndex={0}
>
  3. test
</div>
`;

exports[`SortableItem renders correctly with the required props 1`] = `
<div
  aria-describedby=""
  aria-roledescription="sortable"
  className=""
  data-testid="qb-select-column-order"
  role="button"
  style={
    Object {
      "transform": undefined,
      "transition": undefined,
    }
  }
  tabIndex={0}
>
  test
</div>
`;
